--- a/src/main/resources/conf/jdbc.properties
+++ b/src/main/resources/conf/jdbc.properties
@@ -1,9 +1,9 @@
 #URL链接
-jdbc.url=jdbc:mysql://localhost:3306/db_demo?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://localhost:3306/bbb?useUnicode=true&characterEncoding=utf-8
 #用户名
 jdbc.username=root
 #密码
-jdbc.password=
+jdbc.password=root
 
 #初始连接数
 initialSize=1
