--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,7 +33,7 @@
 
 	  <context-param>
 	    <param-name>contextConfigLocation</param-name>
-	    <param-value>classpath:spring-*.xml</param-value>
+	    <param-value>classpath:conf/spring-*.xml</param-value>
 	  </context-param>
 	  <listener>
 	    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -41,6 +41,10 @@
 	  <servlet>
 	    <servlet-name>springMVC</servlet-name><!-- [name-servlet.xml] -->
 	    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+	    <init-param>
+	        <param-name>contextConfigLocation</param-name>
+	        <param-value>classpath:conf/spring-mvc.xml</param-value>
+	    </init-param>
 	    <load-on-startup>1</load-on-startup>
 	  </servlet>
 	  <servlet-mapping>
